--- a/data_clear.ipynb
+++ b/data_clear.ipynb
@@ -2333,8 +2333,7 @@
    "metadata": {},
    "source": [
     "特征降维\n",
-    "\n",
-    "笔者习惯的特征降维一般做两轮，同时兼顾线性和非线性，第一轮做线性，皮尔逊相关系数矩阵，第二轮做机器学习模型贡献度排序"
+    "特征降维一般做两轮，同时兼顾线性和非线性，第一轮做线性，皮尔逊相关系数矩阵，第二轮做机器学习模型贡献度排序"
    ]
   },
   {
@@ -2386,7 +2385,7 @@
     }
    ],
    "source": [
-    "# 额，误差为0，没想到你竟是这样的阿里\n",
+    "# 误差为0\n",
     "y_pre = ((data_1['dec']+data_1['dec_o'])/2).values\n",
     "print((np.floor(y_pre)-label).sum())"
    ]
@@ -2431,8 +2430,7 @@
    "metadata": {},
    "source": [
     "EDA\n",
-    "\n",
-    "笔者的EDA一般在第一轮特征选择后，对排名靠前的几个变量做考虑，虽然说这对整体数据驱动的机器学习框架没有太多作用，但我还是认为EDA加强了分析师对整体数据的掌控感，因而是十分必要的。"
+    "EDA一般在第一轮特征选择后，对排名靠前的几个变量做考虑，虽然说这对整体数据驱动的机器学习框架没有太多作用，但我还是认为EDA加强了分析师对整体数据的掌控感，因而是十分必要的。"
    ]
   },
   {
@@ -2808,7 +2806,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 我想加上性别分析一下\n",
+    "# 加上性别分析一下\n",
     "def continue_discrete_plot(data, col_con, col_dis, label):\n",
     "    fig,ax = plt.subplots(figsize = (9,5))\n",
     "    sns.violinplot(col_dis,col_con,hue=label,data=data,split=True)\n",
@@ -2847,12 +2845,8 @@
    "metadata": {},
    "source": [
     "总结\n",
-    "\n",
-    "本文将不做更多的EDA分析，篇幅已经有些长了。但基本的手法已经展现（或者以后再展现吧），或者读者可以自行尝试，有时间再填坑（可能永远不会）。\n",
-    "不过我们还是得到了一些基本结论，比方说测试集的标准答案（哈哈）、快速相亲过程中的特征简单重要性、一些专业或者职业类型在相亲中的优劣或者年龄分布。\n",
-    "接下来的过程其实跟我之前做的员工离职分析很类似，重新做些分桶和目标编码的工作，使用SMOTE等方法平衡不平衡数据集后送sklearn中的机器学习模型做特征重要性，再做轮特征选择或者特征构造，之后就是交叉验证调参等等，如果效果不到位，再上神经网络，传统机器学习流程了，最后套一下模型解释方法，对每个样本的相亲战斗力详情都可以可视化了。\n",
-    "但是本案例也存在特殊的地方，因为相亲选择是对称的，所以很多特征也是重复对称的，似乎一个双通道模型能更好地缓解训练压力。\n",
-    "好了，就这么多了，本人刚刚研一开学典礼过4天，水平有限，漏洞百出，望读者包含。"
+    "我们还是得到了一些基本结论，比方说测试集的标准答案、快速相亲过程中的特征简单重要性、一些专业或者职业类型在相亲中的优劣或者年龄分布。\n",
+    "接下来的过程其实跟我之前做的员工离职分析很类似，重新做些分桶和目标编码的工作，使用SMOTE等方法平衡不平衡数据集后送sklearn中的机器学习模型做特征重要性，再做轮特征选择或者特征构造，之后就是交叉验证调参等等，如果效果不到位，再上神经网络，传统机器学习流程了，最后套一下模型解释方法，对每个样本的相亲战斗力详情都可以可视化了。"
    ]
   }
  ],
